--- a/training_source/author-filtering.ipynb
+++ b/training_source/author-filtering.ipynb
@@ -32,14 +32,14 @@
      "text": [
       "/burg/home/ma4608/.local/lib/python3.11/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm, trange\n",
-      "2024-10-02 03:43:23.276245: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-10-02 03:43:27.246511: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-02 03:43:32.337897: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-02 03:43:32.352903: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-02 03:43:32.524336: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-10-02 03:43:34.904711: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-10-02 05:00:45.154684: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-10-02 05:00:48.442353: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-02 05:00:53.378726: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-02 05:00:53.379456: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-02 05:00:53.408444: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-02 05:00:55.657877: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-10-02 03:44:31.955182: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2024-10-02 05:01:53.376467: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
       "  warn(\n"
      ]
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "25390d7a-9c7c-4660-87d5-376f49bdacb2",
    "metadata": {
     "scrolled": true
@@ -192,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "33538it [03:02, 183.85it/s]\n"
+      "33538it [03:46, 147.76it/s]\n"
      ]
     },
     {
@@ -208,7 +208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "65102it [05:54, 183.87it/s]\n"
+      "65102it [06:54, 157.21it/s]\n"
      ]
     },
     {
@@ -224,15 +224,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "558885it [50:28, 184.57it/s]\n"
+      "558885it [59:37, 156.24it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates.jsonl 558926 --> 25000\n",
-      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl 558918 --> 25000\n"
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates.jsonl 558926 --> 50000\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl 558918 --> 50000\n"
      ]
     }
    ],
@@ -241,12 +241,12 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=50000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "be52b80a-0807-476f-8be9-aaa41cfc770c",
    "metadata": {
     "scrolled": true
@@ -263,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3379it [00:27, 122.26it/s]\n"
+      "3379it [00:29, 116.21it/s]\n"
      ]
     },
     {
@@ -279,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6560it [00:53, 122.61it/s]\n"
+      "6560it [00:56, 116.87it/s]\n"
      ]
     },
     {
@@ -295,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "56319it [07:50, 119.70it/s]\n"
+      "56319it [08:05, 115.93it/s]\n"
      ]
     },
     {
@@ -312,12 +312,12 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=50000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "17b242cd-fcac-4445-b18d-0dd42b0a994c",
    "metadata": {
     "scrolled": true
@@ -334,7 +334,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10861it [01:44, 103.77it/s]\n"
+      "10861it [01:48, 100.14it/s]\n"
      ]
     },
     {
@@ -350,7 +350,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "13462it [02:11, 108.35it/s]"
+      "21085it [03:33, 98.56it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/test_candidates.jsonl 21085 --> 5000\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/test_queries.jsonl 21085 --> 5000\n",
+      "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries.jsonl')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "181024it [30:11, 99.92it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_candidates.jsonl 181024 --> 46617\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries.jsonl 181024 --> 46617\n"
      ]
     }
    ],
@@ -359,7 +383,7 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=50000)"
    ]
   },
   {
