--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -33,14 +33,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-01 06:56:01.377913: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-10-01 06:56:03.293250: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-10-01 06:56:06.760671: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-01 06:56:06.761250: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-01 06:56:06.779258: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-10-01 06:56:08.575727: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-10-03 02:54:49.509861: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-10-03 02:54:55.400326: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-10-03 02:55:04.869978: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-03 02:55:04.881602: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-03 02:55:04.966214: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-10-03 02:55:08.821733: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-10-01 06:56:50.181291: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2024-10-03 02:56:17.533667: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
       "  warn(\n"
      ]
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2641421a-26f5-497f-89d4-0b52424eab95",
    "metadata": {},
    "outputs": [],
@@ -317,10 +317,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "fc5bc279-1875-4c0f-b465-4e3251a3ebf5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_candidates_filtered.jsonl\n",
+      "Dataset Statistics: train 103605\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_candidates_filtered.jsonl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Initialized. 🚀 Dreaming to folder: /burg/old_dsi/users/ma4608/ajay-ta2-system/output/original_ta2_performers_data_model_50k\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Statistics: dev 8284\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Train Data' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Train Data' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Dev Data' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Dev Data' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Trainer 'LUAR Trainer' is running (resumed). ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Anchors' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Anchors' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Positives' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Positives' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' is running. ⏳\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' will run lazily. 🥱\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Loading model...\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "The repository for /burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849 contains custom code which must be executed to correctly load the model. You can inspect the repository content at https://hf.co//burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849.\n",
+      "You can avoid this prompt in future by passing the argument `trust_remote_code=True`.\n",
+      "\n",
+      "Do you wish to run the custom code? [y/N]  y\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Finished loading.\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [ 🤗 Accelerate] Detected kernel version 4.18.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 2.507232401157184 -- {'loss': 1.2535, 'grad_norm': 1.5801076889038086, 'learning_rate': 8.212793314046931e-05}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Dev Data' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Anchors' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Validation Positives' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 2.507232401157184 -- {'loss': 1.213529109954834, 'runtime': 187.2039, 'samples_per_second': 44.251, 'steps_per_second': 0.443}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 2.700096432015429 -- {'loss': 1.2424, 'grad_norm': 1.3658034801483154, 'learning_rate': 4.998392799742848e-05}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 2.700096432015429 -- {'loss': 1.2037039995193481, 'runtime': 187.3098, 'samples_per_second': 44.226, 'steps_per_second': 0.443}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 2.892960462873674 -- {'loss': 1.239, 'grad_norm': 1.7539148330688477, 'learning_rate': 1.7839922854387655e-05}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Eval Epoch: 2.892960462873674 -- {'loss': 1.200058102607727, 'runtime': 194.9743, 'samples_per_second': 42.488, 'steps_per_second': 0.426}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'Train Data' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Anchors' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Step 'LUAR Trainer / Tokenize Train Positives' finished running lazily. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Train Epoch: 3.0 -- {'runtime': 3924.7536, 'samples_per_second': 79.194, 'steps_per_second': 0.793, 'loss': 0.283841335746645}\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Loading trained model from disk...\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "The repository for /burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849 contains custom code which must be executed to correctly load the model. You can inspect the repository content at https://hf.co//burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849.\n",
+      "You can avoid this prompt in future by passing the argument `trust_remote_code=True`.\n",
+      "\n",
+      "Do you wish to run the custom code? [y/N]  y\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] [LUAR Trainer (/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849)] Finished loading.\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Trainer 'LUAR Trainer' finished and is saved to disk. 🎉\n",
+      "[ \u001b[35m🤖 Data\u001b[33mDr\u001b[31mea\u001b[35mmer\u001b[0m 💤 ] Done. ✨ Results in folder: /burg/old_dsi/users/ma4608/ajay-ta2-system/output/original_ta2_performers_data_model_50k\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_datadreamer_ta2__on_performers_data(fold, output_path + '/original_ta2_performers_data_model_50k', 'MultipleNegativesSymmetricRankingLoss', luar_model_path=luar_model_path, batch_size=100, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e15d0aa7-450f-40ab-bfc7-a6e73267e38b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "print('done')"
    ]
