experiments for deadline. documented data creation , eval on biber, hrs, kfold, created eval scripts to streamline eval

--- a/src/create_cached_hardbatches_pipeline.ipynb
+++ b/src/create_cached_hardbatches_pipeline.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sadiri Hard Mix Batches"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -249,74 +256,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "pd.read_json(\"/data/araghavan/HIATUS/datadreamer-ta2/data/ta2_jan_2025_trian_data/anchor_pos_train_sadiri_luarmudsbertamllv2.jsonl\", lines=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "biber_path = \"/data/araghavan/HIATUS/datadreamer-ta2/data/biber/genre_data/train_documents.jsonl\"\n",
-    "biber_data_df = pd.read_json(biber_path, lines=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biber_data_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(biber_data_df.columns)\n",
-    "print(biber_data_df.documentID.nunique())\n",
-    "print(biber_data_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biber_genre_df = pd.read_csv(\"/data/araghavan/HIATUS/datadreamer-ta2/data/biber/genre_data/final_train.csv\")\n",
-    "print(biber_genre_df.columns)\n",
-    "print(biber_genre_df.documentID.nunique())\n",
-    "print(biber_genre_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biber_data_genre_df = biber_data_df.merge(biber_genre_df[['documentID', 'predicted_genre']], how=\"inner\", left_on=\"documentID\", right_on=\"documentID\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "biber_data_genre_df.predicted_genre.value_counts()"
+    "# Biber Anchor - Pos Pairs"
    ]
   },
   {
@@ -914,8 +857,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Biber 3 Epochs Cached Hard Mix Batches"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1192,8 +1142,8 @@
     "        self.batch_size = 32\n",
     "        self.sem_sim_threshold = 0.2\n",
     "        self.sty_sim_threshold = 0.3\n",
-    "        self.model_op_dir = \"/data/araghavan/HIATUS/datadreamer-ta2/data/ta2_jan_2025_trian_data\"\n",
-    "        self.op_file_name = f\"train_sadiri_hardmixbatches_{int(time.time())}.jsonl\"\n",
+    "        self.model_op_dir = \"/data/araghavan/HIATUS/datadreamer-ta2/data/biber/genre_data/\"\n",
+    "        self.op_file_name = f\"biber_train_sadiri_anchorpos_cachedhardmixbatches_epochs3_{int(time.time())}.jsonl\"\n",
     "        self.batch_id = 0\n",
     "\n",
     "args = Args()\n",
