--- a/src/hard_batching_from_achorpos_pairs_pipeline.ipynb
+++ b/src/hard_batching_from_achorpos_pairs_pipeline.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,8 @@
    "source": [
     "\n",
     "# 3) Iterative batching\n",
-    "output_jsonl = \"/data/araghavan/HIATUS/datadreamer-ta2/data/ta2_jan_2025_trian_data/trainsadiri_luarmud_chunks/train_sadiri_hard_batches_v001.jsonl\"\n",
+    "# output_jsonl = \"/data/araghavan/HIATUS/datadreamer-ta2/data/ta2_jan_2025_trian_data/trainsadiri_luarmud_chunks/train_sadiri_hard_batches_v001.jsonl\"\n",
+    "output_jsonl = \"/data/araghavan/HIATUS/datadreamer-ta2/data/ta2_jan_2025_trian_data/hard_batching_dataset_luaremb_wo_ao3_filtered/train_sadiri_hard_batches_v001.jsonl\"\n",
     "batch_size = 32\n",
     "print(f\"Creating batches of size {batch_size} ...\")\n",
     "\n",
